Fixes another visibility issue wih text
fixes issues with smaller devices. Increased opacity.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -131,7 +131,7 @@ h2 {
   font-family: 'Bungee Hairline', cursive;
   font-size: 20px;
   font-weight: 700;
-  opacity: 0.6;
+  opacity: 0.7;
   text-align: center;
 }
 
@@ -141,12 +141,12 @@ h4 {
   font-weight: bold;
 }
 
-.UAtext {
+h2.UAtext {
   color: white;
   font-family: 'Bungee Hairline', cursive;
   font-weight: 700;
   font-size: 22px;
-  opacity: 0.6;
+  opacity: 0.8;
   text-align: center;
 }
 
@@ -157,7 +157,7 @@ p {
   font-size: 17px;
   line-height: 44px;
   text-align: center;
-  opacity: 0.5;
+  opacity: 0.8;
 }
 
 input {
